src/components/section-bar.css
.section-bar-wrapper {
  position: fixed;
  right: 0;
  top: 35%;
}

.section-bar {
  height: 4rem;
  width: 0.5rem;
  background-color: rgba(255, 255, 255, 0.2);
  margin: 1rem;
  border-radius: 10px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.section-bar:hover {
  height: 4rem;
  width: 0.5rem;
  background-color: rgba(255, 255, 255, 0.5);
  margin: 1rem;
  border-radius: 10px;
  cursor: pointer;
}

.section-bar-active {
  height: 4rem;
  width: 0.5rem;
  background-color: white;
  margin: 1rem;
  border-radius: 10px;
  cursor: pointer;
}

